cleaning the code structure

--- a/code/index.html
+++ b/code/index.html
@@ -11,7 +11,7 @@
 
 <!-- Hero image + text  -->
 <header class="hero-image">
-  <img class="logo" src="./coldspa.svg" alt="logo">
+  <img class="logo" src="assets/coldspa.svg" alt="logo">
   <h1 class="hero-text">Cold Spa</h1>
 </header>
 
@@ -24,7 +24,7 @@
 
 <!-- Booking-form -->
 <section class="booking-container">
-  <img class="moodbild" src="./caroline.jpeg" alt="schamponering">
+  <img class="moodbild" src="assets/caroline.jpeg" alt="schamponering">
 <form class="booking" action="http://httpbin.org/anything" method="POST">
   
   <label>
@@ -117,5 +117,4 @@
 </footer>
 <script src="./script.js"></script>
 </body>
-
 </html>
