structure .js in a better way

--- a/code/index.html
+++ b/code/index.html
@@ -75,39 +75,38 @@
 <!-- Accordion - FAQ -->
 <section class="accordion">
   <h2>Good to know!</h2>
-
-  <div class="question" id="question1">
-    <h4>Do I have to bring my own bathrobe and swimwear?</h4>
-  </div>
-  <div class="answer">
-    <p>You bring your own swimwear. Bathrobe and slippers will be in your room. If you forget swimwear, it can be
+  <div class="question-container">
+    <h4 class="question" id="question-1"> Do I have to bring my own bathrobe and swimwear?</h4>
+  <div class="answer-container">
+    <p class="answer">You bring your own swimwear. Bathrobe and slippers will be in your room. If you forget swimwear, it can be
       purchased in our spa shop (at the spa reception).</p>
   </div>
-  <div class="question" id="question2">
-    <h4>How do I get to Cold Spa?</h4>
   </div>
-  <div class="answer">
-    <p>The easiest is to arrive by car. If you come by bus from Östersund (to Krokoms station), we recommend a
+  <div class="question-container">
+    <h4 class="question" id="question-2">How do I get to Cold Spa?</h4>
+  <div class="answer-container">
+    <p class="answer">The easiest is to arrive by car. If you come by bus from Östersund (to Krokoms station), we recommend a
       pre-booked taxi for the last stretch to the spa.</p>
   </div>
-  <div class="question" id="question3">
-    <h4>Do you provide alternative food for allergies?</h4>
   </div>
-  <div class="answer">
-    <p>Yes, we do. Please inform us of your allergies at time of booking. Our breakfast buffet is clearly marked in
+  <div class="question-container">
+    <h4 class="question" id="question-3">Do you provide alternative food for allergies?</h4>
+  <div class="answer-container">
+    <p class="answer">Yes, we do. Please inform us of your allergies at time of booking. Our breakfast buffet is clearly marked in
       terms of allergenes.</p>
   </div>
-  <div class="question" id="question4">
-    <h4>How far away is the skiresort Åre?</h4>
   </div>
-  <div class="answer">
-    <p>It's a 1 hour drive from Cold Spa.</p>
+  <div class="question-container">
+    <h4 class="question" id="question-4">How far away is the skiresort Åre?</h4>
+  <div class="answer-container">
+    <p class="answer">It's a 1 hour drive from Cold Spa.</p>
   </div>
-  <div class="question" id="question5">
-    <h4>Does Cold Spa provide free parking?</h4>
   </div>
-  <div class="answer">
-    <p>Yes. Cold Spa provides free parking.</p>
+  <div class="question-container">
+    <h4 class="question" id="question-5">Does Cold Spa provide free parking?</h4>
+  <div class="answer-container">
+    <p class="answer">Yes. Cold Spa provides free parking.</p>
+  </div>
   </div>
 </section>
 
